styles.css
:root {
    /* Colors */

    --white: #FFFFFF;
    --grey: #949494;
    --blue-700: #36384D;
    --blue-800: #242742;
    --red: #FF6155;
    --gradient-4: linear-gradient(#FF6A3A, #FF527B);


   /* Spacing */

    --space100: 8px;
    --space200: 16px;
    --space300: 24px;
    --space400: 32px;
    --space500: 40px;
    --space600: 48px;
    --space800: 64px;
    --space900: 72px;
    --space1300: 104px;


}

*, *::before, *::after {
    box-sizing: border-box;
}



@font-face {
    font-family: robotoBold;
    src: url(assets/fonts/Roboto-Bold.ttf)
}

@font-face {
    font-family: robotoReg;
    src: url(assets/fonts/Roboto-Regular.ttf);
}

 /* Text Presets */

.text-one {
    font-family: robotoBold;
    font-size: 88px;
    letter-spacing: 0px;
} 

.text-mobile-one {
    font-family: robotoBold;
    font-size: 50px;
    letter-spacing: 0px;
}

.text-two-bold {
    font-family: robotoBold;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0px;
}

.text-two {
    font-family: robotoReg;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0px;
}

.text-three {
    font-family: robotoBold;
    font-size: 12px;
    line-height: 1.5;
    letter-spacing: 0px;
}

.text-success {
    font-family: robotoBold;
    font-size: 40px;
    letter-spacing: 0px;
}

/* Styles */



body {
    margin: 0;
    min-height: 100vh;
    position: relative;
    
}

#outer {
    min-height: 100vh;
    
    
}

#container {
    
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--white);
    
}

#banner {
    width: 100%;
    display: flex;
    justify-content: center;
}

main {
    padding: var(--space100);
    color: var(--blue-800);
    width: 92%;
    
}

ul {
    list-style-image: url("assets/images/icon-list.svg");
    padding: 0 0 4px;
    list-style-position: inside;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

li  {
    padding: 4px;
}

input, button {
    display: block;
    width: 100%;
    padding: 14px var(--space200);
    border-radius: 10px;
    margin: var(--space100) 0 var(--space200);
}

#label-wrap {
    display: flex;
    justify-content: space-between;
}

#email:user-invalid {
    background-color: var(--red);
    border: 2px solid var(--red);
}

#error {
    color: var(--red);
}

.hidden {
    display: none;
}

#sub-btn {
    background-color: var(--blue-800);
    color: var(--white);
    cursor: pointer;
}

#sub-btn:hover, #sub-btn:active {
    background: var(--gradient-4);
}

#success-wrapper {
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

#success {
    height: 100vh;
    padding: var(--space300);
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

#dismiss-btn {
    padding: var(--space200) var(--space300);
    border-radius: 10px;
    margin: var(--space100) 0 var(--space200);
    background-color: var(--blue-800);
    color: var(--white);
    cursor: pointer;
}



#dismiss-btn:hover, #dismiss-Btn:active {
    background: var(--gradient-4);
}

/* Typography */

h1 {
    margin-bottom: var(--space100);
}

h2 {
    margin: 0;
}


/* Images */

img {
    width: 100%;
    height: auto;
    
   
}

picture {
    width: 100%;
    display: flex;
    justify-content: center;
    
}

#success-icon {
    width: 50px;
    margin: 0;
}

@media (min-width: 768px) {

    body {
        background-color: var(--blue-700);
    }

    #outer {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    #container {
        justify-content: center;
        width: 600px;
        padding: 20px;
        border-radius: 24px;
        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    }

    picture {
        width: 90%;
        border-radius: 24px;
        max-height: 400px;
        overflow: hidden;
        
    }

    img {
        border-radius: 24px;
        height: 100%;
        overflow: hidden;
    }

    .text-mobile-one {
        font-size: 54px;
    }

    #success {
        height: initial;
    }

    #success-wrapper {
        position: absolute;
        
        top: 50%;
        transform: translateY(-50%);
        left: 0; 
        right: 0; 
        margin-inline: auto; 
        background-color: #FF527B;
        width: 400px;
        height: 400px;
        border-radius: 12px;
    }


}

@media (min-width: 800px) {
    picture {
        max-height: 450px;
    }
}

@media (min-width: 900px) {
    picture {
        max-height: 500px;
    }
}

@media (min-width: 1200px) {
    #container {
        flex-direction: row-reverse;
        justify-content: center;
        align-items: center;
        gap: var(--space600);
        width: initial;
    }

    main {
        max-width: 500px;
        padding: var(--space400)
    }

    h1 {
        margin: 0;
    }
    
    picture, img {
        max-width: 500px;
        max-height: 600px;
        margin-top: 0;
    }

    
}

